--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-GRAPHQL_ENDPOINT="https://wordpress-1412047-5255669.cloudwaysapps.com/graphql"
+GRAPHQL_ENDPOINT="https://aslam-1039933.ingress-haven.ewp.live/graphql"
