--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-GRAPHQL_ENDPOINT="https://aslam-1039933.ingress-haven.ewp.live/graphql"
+GRAPHQL_ENDPOINT="https://wordpress-1414741-5266757.cloudwaysapps.com/graphql"
